# captioneer

./: .gitignore  app.py  pyproject.toml  requirements.txt  settings.ini
src/: settings.py  tab_layout.py
src/styles/: dark_styles.py  light_styles.py
src/tabs/: delete_proper_nouns.py  image_tagger_tab.py  information_tab.py  settings_tab.py  utils.py
